# fastapi-shop

./: README.md  deploy.sh
backend/: Dockerfile  pyproject.toml  run.py
backend/app/: config.py  database.py  main.py
backend/app/dto/: cart_dto.py
backend/app/models/: category.py  product.py
backend/app/repositories/: category.py  product.py
backend/app/routes/: __init__.py  cart.py  categories.py  products.py
backend/app/schemas/: cart.py  category.py  product.py
backend/app/services/: cart.py  category.py  product.py
frontend/: nginx.conf  vite.config.js
frontend/src/: App.vue
frontend/src/components/: CartItem.vue  CategoryFilter.vue  ProductCard.vue
frontend/src/router/: index.js
frontend/src/services/: api.js
frontend/src/stores/: cart.js  products.js
frontend/src/views/: HomePage.vue  ProductDetailPage.vue
